[CHG] Update styles to match LowVolley.com

--- a/app/styles/_colors-light.scss
+++ b/app/styles/_colors-light.scss
@@ -4,3 +4,6 @@ $primary-text-color: #8F9DAA;
 $secondary-text-color: #8F9DAA;
 $tertiary-text-color: #8F9DAA;
 $button-text-color: #8F9DAA;
+
+$purple: #92407E;
+$purple-hover: #783568;
