--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -2,17 +2,17 @@
 
   <div class="bg-color1">
     <fieldset>
-      <label>Team1</label>
+      <label>Team 1</label>
       {{input type="text" value=model.team1Name key-press="update"}}
     </fieldset>
 
     <fieldset>
-      <label>Team2</label>
+      <label>Team 2</label>
       {{input type="text" value=model.team2Name key-press="update"}}
     </fieldset>
   </div>
 
-  <h3>First Singles</h3>
+  <h4 class="align-left">First Singles</h4>
   <div style="width: 15%; float: left;">
     <fieldset>
       <label>{{model.court1Team1Set1}}
@@ -63,7 +63,7 @@
 
   <div class="clearFloat"></div>
 
-  <h3>Second Singles</h3>
+  <h4 class="align-left">Second Singles</h4>
   <div style="width: 15%; float: left;">
     <fieldset>
       <label>{{model.court2Team1Set1}}
@@ -114,7 +114,7 @@
 
   <div class="clearFloat"></div>
 
-  <h3>First Doubles</h3>
+  <h4 class="align-left">First Doubles</h4>
   <div style="width: 15%; float: left;">
     <fieldset>
       <label>{{model.court3Team1Set1}}
@@ -165,7 +165,7 @@
 
   <div class="clearFloat"></div>
 
-  <h3>Second Doubles</h3>
+  <h4 class="align-left">Second Doubles</h4>
   <div style="width: 15%; float: left;">
     <fieldset>
       <label>{{model.court4Team1Set1}}
@@ -216,7 +216,7 @@
 
   <div class="clearFloat"></div>
 
-  <h3>Third Doubles</h3>
+  <h4 class="align-left">Third Doubles</h4>
   <div style="width: 15%; float: left;">
     <fieldset>
       <label>{{model.court5Team1Set1}}
