--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -2,23 +2,48 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
-  background: $background-color2;
-  font-family: 'Open Sans', sans-serif;
-  color: $primary-text-color;
+  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
   text-align: center;
+  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+  line-height: 1.6;
+  font-weight: 400;
+  color: #222;
 }
 
-h1, h2 {
-  font-size: 2em;
-  margin: .5em 0;
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 2rem;
+  font-weight: 300;
+  color: $purple;
 }
 
-h3 {
-  text-align: left;
+h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
+h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
+h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
+h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
+h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
+h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+  h1 { font-size: 5.0rem; }
+  h2 { font-size: 4.2rem; }
+  h3 { font-size: 3.6rem; }
+  h4 { font-size: 3.0rem; }
+  h5 { font-size: 2.4rem; }
+  h6 { font-size: 1.5rem; }
+}
+
+p {
+  margin-top: 0;
 }
 
 small {
@@ -26,27 +51,22 @@ small {
 }
 
 .teams {
-  background-color: $background-color1;
   padding: 2em 0;
 }
 
 .score {
-  background-color: $background-color2;
   font-size: 2em;
 }
 
 .inning {
-  background-color: $background-color1;
   padding: 1em 0;
 }
 
 .count {
-  background-color: $background-color2;
   padding: 1em 0;
 }
 
 .box-score {
-  background-color: $background-color1;
   padding: 1em 0;
 
   div {
@@ -56,9 +76,8 @@ small {
 
 .box-score-title {
   display: inline-block;
-  margin: 0 1.5em;
+  margin: 0 .5em;
   color: $secondary-text-color;
-  font-size: .75em;
 }
 
 .box-score-value {
@@ -67,7 +86,6 @@ small {
 }
 
 .info {
-  background-color: $background-color2;
   padding: 2em 0;
 }
 
@@ -81,16 +99,12 @@ small {
   width: 40%;
 }
 
-.bg-color1 {
-  background-color: $background-color1;
-}
-
-.bg-color2 {
-  background-color: $background-color2;
-}
-
 .margin-bottom {
   margin-bottom: 2em;
+}
+
+.align-left {
+  text-align: left;
 }
 
 .clearFloat {
