--- a/app/styles/_forms.scss
+++ b/app/styles/_forms.scss
@@ -105,3 +105,8 @@ label > .label-body {
   margin-left: .5rem;
   font-weight: normal;
 }
+
+.text-small {
+  display: inline-block;
+  max-width: 25%;
+}
