--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -11,13 +11,13 @@
       <span class="box-score-title">Set 2</span>
       <span class="box-score-title">Set 3</span>
     </div>
-    <div>
+    <div style="position: relative;">
       <span class="{{if model.court1Team1Serving "serving" "not-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court1Team1Set1}}</span>
       <span class="box-score-value">{{model.court1Team1Set2}}</span>
       <span class="box-score-value">{{model.court1Team1Set3}}</span>
     </div>
-    <div>
+    <div style="position: relative;">
       <span class="{{if model.court1Team1Serving "not-serving" "serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court1Team2Set1}}</span>
       <span class="box-score-value">{{model.court1Team2Set2}}</span>
@@ -32,13 +32,13 @@
       <span class="box-score-title">Set 2</span>
       <span class="box-score-title">Set 3</span>
     </div>
-    <div>
+    <div style="position: relative;">
       <span class="{{if model.court2Team1Serving "serving" "not-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court2Team1Set1}}</span>
       <span class="box-score-value">{{model.court2Team1Set2}}</span>
       <span class="box-score-value">{{model.court2Team1Set3}}</span>
     </div>
-    <div>
+    <div style="position: relative;">
       <span class="{{if model.court2Team1Serving "not-serving" "serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court2Team2Set1}}</span>
       <span class="box-score-value">{{model.court2Team2Set2}}</span>
@@ -53,13 +53,13 @@
       <span class="box-score-title">Set 2</span>
       <span class="box-score-title">Set 3</span>
     </div>
-    <div>
+    <div style="position: relative;">
       <span class="{{if model.court3Team1Serving "serving" "not-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court3Team1Set1}}</span>
       <span class="box-score-value">{{model.court3Team1Set2}}</span>
       <span class="box-score-value">{{model.court3Team1Set3}}</span>
     </div>
-    <div>
+    <div style="position: relative;">
       <span class="{{if model.court3Team1Serving "not-serving" "serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court3Team2Set1}}</span>
       <span class="box-score-value">{{model.court3Team2Set2}}</span>
@@ -74,13 +74,13 @@
       <span class="box-score-title">Set 2</span>
       <span class="box-score-title">Set 3</span>
     </div>
-    <div>
+    <div style="position: relative;">
       <span class="{{if model.court4Team1Serving "serving" "not-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court4Team1Set1}}</span>
       <span class="box-score-value">{{model.court4Team1Set2}}</span>
       <span class="box-score-value">{{model.court4Team1Set3}}</span>
     </div>
-    <div>
+    <div style="position: relative;">
       <span class="{{if model.court4Team1Serving "not-serving" "serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court4Team2Set1}}</span>
       <span class="box-score-value">{{model.court4Team2Set2}}</span>
@@ -95,13 +95,13 @@
       <span class="box-score-title">Set 2</span>
       <span class="box-score-title">Set 3</span>
     </div>
-    <div>
+    <div style="position: relative;">
       <span class="{{if model.court5Team1Serving "serving" "not-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court5Team1Set1}}</span>
       <span class="box-score-value">{{model.court5Team1Set2}}</span>
       <span class="box-score-value">{{model.court5Team1Set3}}</span>
     </div>
-    <div>
+    <div style="position: relative;">
       <span class="{{if model.court5Team1Serving "not-serving" "serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court5Team2Set1}}</span>
       <span class="box-score-value">{{model.court5Team2Set2}}</span>
