--- a/app/styles/_forms.scss
+++ b/app/styles/_forms.scss
@@ -108,5 +108,8 @@ label > .label-body {
 
 .text-small {
   display: inline-block;
-  max-width: 25%;
+  width: 100%;
+  @media (min-width: 550px) {
+    max-width: 25%;
+  }
 }
