--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,8 +5,8 @@
   </div>
 
   <div class="box-score">
-    <h4>First Singles - {{model.court1Team1Name}} vs. {{model.court1Team2Name}}</h4>
-    <div>
+    <h4>Court 1 - {{model.court1Team1Name}} vs. {{model.court1Team2Name}}</h4>
+    <div class="box-score-title-box">
       <span class="box-score-title">Set 1</span>
       <span class="box-score-title">Set 2</span>
       <span class="box-score-title">Set 3</span>
@@ -16,18 +16,20 @@
       <span class="box-score-value">{{model.court1Team1Set1}}</span>
       <span class="box-score-value">{{model.court1Team1Set2}}</span>
       <span class="box-score-value">{{model.court1Team1Set3}}</span>
+      <span class="box-score-value" class="note">{{model.court1Team1Name}}</span>
     </div>
     <div style="position: relative;">
       <span class="{{if model.court1Team1Serving "not-serving" "serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court1Team2Set1}}</span>
       <span class="box-score-value">{{model.court1Team2Set2}}</span>
       <span class="box-score-value">{{model.court1Team2Set3}}</span>
+      <span class="box-score-value" class="note">{{model.court1Team2Name}}</span>
     </div>
   </div>
 
   <div class="box-score">
-    <h4>Second Singles - {{model.court2Team1Name}} vs. {{model.court2Team2Name}}</h4>
-    <div>
+    <h4>Court 2 - {{model.court2Team1Name}} vs. {{model.court2Team2Name}}</h4>
+    <div class="box-score-title-box">
       <span class="box-score-title">Set 1</span>
       <span class="box-score-title">Set 2</span>
       <span class="box-score-title">Set 3</span>
@@ -47,8 +49,8 @@
   </div>
 
   <div class="box-score">
-    <h4>First Doubles - {{model.court3Team1Name}} vs. {{model.court3Team2Name}}</h4>
-    <div>
+    <h4>Court 3 - {{model.court3Team1Name}} vs. {{model.court3Team2Name}}</h4>
+    <div class="box-score-title-box">
       <span class="box-score-title">Set 1</span>
       <span class="box-score-title">Set 2</span>
       <span class="box-score-title">Set 3</span>
@@ -68,8 +70,8 @@
   </div>
 
   <div class="box-score">
-    <h4>Second Doubles - {{model.court4Team1Name}} vs. {{model.court4Team2Name}}</h4>
-    <div>
+    <h4>Court 4 - {{model.court4Team1Name}} vs. {{model.court4Team2Name}}</h4>
+    <div class="box-score-title-box">
       <span class="box-score-title">Set 1</span>
       <span class="box-score-title">Set 2</span>
       <span class="box-score-title">Set 3</span>
@@ -89,8 +91,8 @@
   </div>
 
   <div class="box-score">
-    <h4>Third Doubles - {{model.court5Team1Name}} vs. {{model.court5Team2Name}}</h4>
-    <div>
+    <h4>Court 5 - {{model.court5Team1Name}} vs. {{model.court5Team2Name}}</h4>
+    <div class="box-score-title-box">
       <span class="box-score-title">Set 1</span>
       <span class="box-score-title">Set 2</span>
       <span class="box-score-title">Set 3</span>
